= New Features =

== 1.21 release (in-progress) == #release-1.21

=== Library ===

==== Major changes ====
 * BoxCoxFactory handles linear model

==== New classes ====
 * SmolyakExperiment (openturns.experimental)

==== API changes ====
 * Removed SequentialStrategy
 * Removed TensorApproximationAlgorithm, TensorApproximationResult, CanonicalTensorEvaluation, CanonicalTensorGradient
 * Removed FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int)
 * Removed FunctionalChaosSobolIndices::summary
 * Removed CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC
 * Removed Distribution.getStandardMoment
 * Removed deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors
 * Removed FunctionalChaosAlgorithm(Function) ctors
 * Removed MetaModelResult(Function, Function, ...) ctor
 * Removed FunctionalChaosResult.getComposedModel, MetaModelResult.getModel and associated attributes for 1.21
 * Removed FunctionalChaosResult Function ctor
 * Removed (Process)Sample::computeCenteredMoment
 * Removed Distribution::getCenteredMoment
 * Removed IterativeMoments::getCenteredMoments
 * Removed GeneralLinearModelAlgorithm | KrigingAlgorithm ctors
 * Removed Drawable.draw|clean & Graph.draw|clean|getRCommand|makeR*|GetExtensionMap methods
 * Removed Sample.storeToTemporaryFile|streamToRFormat methods
 * Removed GaussianProcess.GIBBS
 * Deprecated DomainIntersection|Union|DisjunctiveUnion(Domain, Domain) ctors
 * KrigingResult.getTrendCoefficients now returns a single Point
 * GeneralLinearModelResult.getTrendCoefficients now returns a single Point
 * KrigingResult.getBasisCollection was removed in favor of KrigingResult.getBasis which returns a single Basis
 * GeneralLinearModelResult.getBasisCollection was removed in favor of GeneralLinearModelResult.getBasis which returns a single Basis
 * Deprecated EllipticalDistribution::getInverseCorrelation

=== Documentation ===
 * Add API documentation to common use cases pages

=== Python module ===
