@@ -71,6 +71,9 @@ public:
   /** Model gradient wrt the parameter accessor */
   Matrix getGradientObservations() const;
 
+  /** Candidate accessor */
+  Point getCandidate() const;
+
   /** StartingPoint accessor */
   Point getStartingPoint() const;
 
