@@ -65,6 +65,9 @@ public:
   OptimizationAlgorithm getOptimizationAlgorithm() const;
   void setOptimizationAlgorithm(const OptimizationAlgorithm & algorithm);
 
+  /** Candidate accessor */
+  Point getCandidate() const;
+
   /** StartingPoint accessor */
   Point getStartingPoint() const;
 
